[package]
name = "japanese-ruby-filter"
version = "0.1.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Cargo says the following message:
#   Features and dependencies cannot have the same name: `pulldown-cmark`.
pulldown-cmark-filter = ["pulldown-cmark"]

[dependencies]
thiserror = "1.0.23"
pulldown-cmark = { version = "0.8.0", optional = true }
